--- a/resources/CitiesHtml.ipynb
+++ b/resources/CitiesHtml.ipynb
@@ -230,7 +230,7 @@
     "    plt.xlabel('Latitude')\n",
     "    plt.ylabel(column)\n",
     "    plt.grid (b=True,which=\"major\",axis=\"both\",linestyle=\"-\",color=\"lightgrey\")\n",
-    "    plt.savefig(f\"../assets/Latitude_v_{column}.png\")\n",
+    "    plt.savefig(f\"../assets/Latitude_v_{column}.png\", transparent=True)\n",
     "    plt.show()"
    ]
   },
